# sample-quicksight-backup-tool

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  config.sample.yaml  pyproject.toml  quicksight-backup.py  setup.py
docs/: backup_process_flow.md
examples/: README.md  config-basic.yaml  config-enterprise.yaml
quicksight_backup/: __init__.py  cli.py  orchestrator.py
quicksight_backup/config/: __init__.py  manager.py
quicksight_backup/models/: __init__.py  asset_inventory.py  backup_result.py  config.py  exceptions.py  user_group.py
quicksight_backup/services/: __init__.py  asset_bundle_backup.py  base.py  error_handler.py  logging.py  user_group_backup.py
